--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,8 @@
-title: Long Haul
+title: Slickmind - The Blog
 description: Long Form Jekyll theme built with SASS / COMPASS / SUSY
 
-url: http://brianmaierjr.github.com/long-haul
+url: "http://slickmind.in"
+enforce_ssl: "slickmind.in"
 baseurl: ""
 paginate_path: "blog/page:num/"
 permalink: blog/:title/
@@ -20,9 +21,8 @@ navigation:
    url: /contact
 
 social:
-   github: brianmaierjr
-   twitter: brianmaierjr
-   facebook: brianmaierjr
-   email: brimaidesigns@gmail.com
+   github: nitesh4146
+   twitter: nitesh4146
+   email: nitesh4146@gmail.com
 
 google_analytics: "UA-58263416-1"
