--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,5 @@
 title: Slickmind - The Blog
-description: Dive into the world of Artificial Intelligence, Robotics and Intelligent transportation systems.
-Find solutions to numerous unanswered questions.
+description: Dive into the world of Artificial Intelligence, Robotics and Intelligent transportation systems. Find solutions to numerous unanswered questions.
 
 url: "http://slickmind.in"
 enforce_ssl: "slickmind.in"
