removed few tabs

--- a/_config.yml
+++ b/_config.yml
@@ -15,10 +15,10 @@ paginate: 5
 navigation:
  - title: Home
    url: /index.html
- - title: About
-   url: /about
- - title: Contact
-   url: /contact
+ # - title: About
+ #   url: /about
+ # - title: Contact
+ #   url: /contact
 
 social:
    github: nitesh4146
